﻿<h3>Version 1.1.8</h3>
<ul>
    <li>Implemented #63: Added EmployeeDetails module.</li>
    <li>EmployeeDetails: Optimize & fix table painting script.</li>
    <li>Localization updated.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.7</h3>
<ul>
    <li>Fixed #65: DivisionDirectory shows unpublished head employees.</li>
    <li>Implemented / fixed #64: Employee: Cross-portal Tab URLs.</li>
    <li>EditEmployee: Fixes and some refactoring of the UI.</li>
    <li>EmployeeList: Fix wrong edit control invoked.</li>
    <li>Employee, EmployeeList, Division: Added module URL to the search.</li>
    <li>Use separate CSS files for view and edit/settings controls.</li>
    <li>Packaging project renamed to avoid conflicts with NuGet.</li>
</ul>

<h3>Version 1.1.6 RC</h3>
<ul>
    <li>New DivisionDirectory module.</li>
    <li>EmployeeDirectory, DivisionDirectory: Added edit links to the search results.</li>
    <li>Make sure that shared employee / division controls have same key names in different modules.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.5</h3>
<ul>
    <li>EditEmployee: Control now fully localizable.</li>
    <li>EditEmployee: Added russian localization resources.</li>
    <li>EditEmployee: Display document URL in achievements edit form.</li>
    <li>Implemented #55: ViewEmployeeDetails: Added edit button.</li>
    <li>Implemented #56: EmployeeDirectory: Mark unpublished employees.</li>
    <li>Implemented #58: ViewEmployeeDetails: Paint tables with dnnGrid classes.</li>
    <li>Implemented #32: Now short titles also optional for division and position entities.</li>
    <li>Fixed #59: EmpoyeeDirectory: Missing division link.</li>
    <li>EmployeeList: DB requests reduced from (1 + 2*NEmployees) to 3.</li>
    <li>EditDivision: Use treeview to select parent division.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.4</h3>
<ul>