@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.01.08">
+		<package name="R7.University" type="Library" version="01.02.00">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -66,9 +66,13 @@
 							<name>SqlDataProvider\01.01.07.SqlDataProvider</name>
 							<version>01.01.07</version>
 						</script>
+						<script type="Install">
+							<name>SqlDataProvider\01.02.00.SqlDataProvider</name>
+							<version>01.02.00</version>
+						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.01.08</version>
+							<version>01.02.00</version>
 						</script>
 					</scripts>
 				</component>
@@ -91,7 +95,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.01.08">
+		<package name="R7.University.Launchpad" type="Module" version="01.02.00">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
@@ -238,7 +242,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.01.08">
+		<package name="R7.University.Employee" type="Module" version="01.02.00">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -342,7 +346,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDetails" type="Module" version="01.01.08">
+		<package name="R7.University.EmployeeDetails" type="Module" version="01.02.00">
 			<friendlyName>_EmployeeDetails</friendlyName>
 			<description>This is a module to display detailed information about single employee.</description>
 			<owner>
@@ -426,7 +430,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.01.08">
+		<package name="R7.University.EmployeeList" type="Module" version="01.02.00">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -519,7 +523,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.01.08">
+		<package name="R7.University.Division" type="Module" version="01.02.00">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -612,7 +616,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.01.08">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.02.00">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -705,7 +709,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.DivisionDirectory" type="Module" version="01.01.08">
+		<package name="R7.University.DivisionDirectory" type="Module" version="01.02.00">
 			<friendlyName>R7.University.DivisionDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
